[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Iaroslav Ciupin <iaroslav.ciupin@ellation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
linkify = "0.4.0"
futures = "0.3.5"
url = "2.1.1"
